# project1

./: .gitignore  CMakeLists.txt  Part1.h  README.md  SamplePHY.m  check.py  input.in  main.cpp  onlyrecord.cpp
JUCE/extras/AudioPerformanceTest/Builds/VisualStudio2022/: AudioPerformanceTest.sln
JUCE/extras/AudioPluginHost/Builds/VisualStudio2017/: AudioPluginHost.sln
JUCE/extras/AudioPluginHost/Builds/VisualStudio2019/: AudioPluginHost.sln
JUCE/extras/AudioPluginHost/Builds/VisualStudio2022/: AudioPluginHost.sln
JUCE/extras/BinaryBuilder/Builds/VisualStudio2022/: BinaryBuilder.sln
JUCE/extras/NetworkGraphicsDemo/Builds/VisualStudio2022/: NetworkGraphicsDemo.sln
JUCE/extras/Projucer/Builds/VisualStudio2017/: Projucer.sln
JUCE/extras/Projucer/Builds/VisualStudio2019/: Projucer.sln
JUCE/extras/Projucer/Builds/VisualStudio2022/: Projucer.sln
JUCE/extras/UnitTestRunner/Builds/VisualStudio2017/: UnitTestRunner.sln
JUCE/extras/UnitTestRunner/Builds/VisualStudio2019/: UnitTestRunner.sln
JUCE/extras/UnitTestRunner/Builds/VisualStudio2022/: UnitTestRunner.sln
JUCE/extras/WindowsDLL/Builds/VisualStudio2022/: WindowsDLL.sln
JUCE/modules/juce_audio_basics/sources/: juce_MemoryAudioSource.cpp  juce_ToneGeneratorAudioSource.cpp
JUCE/modules/juce_audio_formats/format/: juce_AudioFormatReaderSource.cpp
JUCE/modules/juce_audio_processors/format_types/: juce_LADSPAPluginFormat.cpp  juce_VSTPluginFormat.cpp
JUCE/modules/juce_gui_extra/misc/: juce_AppleRemote.h
part1&2/: Part1&2.h  main.cpp
part3/: Part3.h  main.cpp  utils.cpp  utils.h
part4/: Part4.h  main.cpp  utils.cpp  utils.h
